--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,5 +1,5 @@
 ---
-import YukinaConfig from "../../yukina.config";
+import YukinaConfig from "../../app.config";
 import { i18n } from "../locales/translation";
 
 import { Icon } from "astro-icon/components";
