--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -5,7 +5,7 @@ import PostCardInfoIcon from "./widgets/PostCardInfoIcon.astro";
 import { GetCoverURLForUnspecifiedEntry } from "../utils/cover";
 import { i18n } from "../locales/translation";
 import I18nKeys from "../locales/keys";
-import YukinaConfig from "../../yukina.config";
+import YukinaConfig from "../../app.config";
 import { formatDate } from "../utils/date";
 
 export interface Props {
