--- a/src/components/misc/ArchivePost.astro
+++ b/src/components/misc/ArchivePost.astro
@@ -1,6 +1,6 @@
 ---
 import { formatDate } from "../../utils/date";
-import YukinaConfig from "../../../yukina.config";
+import YukinaConfig from "../../../app.config";
 
 export interface Props {
   id: string;
