--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,5 +1,5 @@
 ---
-import YukinaConfig from "../../yukina.config";
+import YukinaConfig from "../../app.config";
 import { GetCoverURLForUnspecifiedEntry } from "../utils/cover";
 
 export interface Props {
