--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -8,17 +8,17 @@ import "overlayscrollbars/overlayscrollbars.css";
 
 <style is:global>
   :root {
-    --hue: 300;
+    --hue: 32;
 
-    --primary-color: oklch(70% 0.15 var(--hue));
-    --primary-color-lighten: oklch(95% 0.02 var(--hue));
-    --primary-color-hover: oklch(90% 0.025 var(--hue));
-    --primary-color-transparent: oklch(70% 0.15 var(--hue) / 15%);
-    --text-color: oklch(30% 0 0);
-    --text-color-lighten: oklch(50% 0 0);
-    --card-color: oklch(100% 0 0);
-    --card-color-transparent: oklch(100% 0 0 / 85%);
-    --background-color: oklch(97% 0.01 var(--hue));
+    --primary-color: hsl(32, 100%, 50%);
+    --primary-color-lighten: hsl(32, 100%, 95%);
+    --primary-color-hover: hsl(32, 100%, 90%);
+    --primary-color-transparent: hsl(32, 100%, 50%, 0.15);
+    --text-color: hsl(0, 0%, 30%);
+    --text-color-lighten: hsl(0, 0%, 50%);
+    --card-color: hsl(0, 0%, 100%);
+    --card-color-transparent: hsl(0, 0%, 100%, 0.85);
+    --background-color: hsl(32, 100%, 97%);
 
     --brand-font: "Raleway", "Noto Sans SC", sans-serif;
     --primary-font: "Noto Sans SC", sans-serif;
@@ -29,24 +29,24 @@ import "overlayscrollbars/overlayscrollbars.css";
 
     --banner-height: 55vh;
     --title-font: var(--brand-font);
-    --title-color: oklch(100% 0 0 / 95%);
+    --title-color: hsl(0, 0%, 100%, 0.95);
     --subtitle-font: var(--brand-font);
-    --subtitle-color: oklch(100% 0 0 / 85%);
+    --subtitle-color: hsl(0, 0%, 100%, 0.85);
 
     --onload-animation-delay: 100ms;
     --onload-animation-interval: 100ms;
   }
 
   :root.dark {
-    --primary-color: oklch(70% 0.125 var(--hue));
-    --primary-color-lighten: oklch(40% 0.04 var(--hue));
-    --primary-color-hover: oklch(20% 0.015 var(--hue));
-    --text-color: oklch(95% 0.002 var(--hue));
-    --text-color-lighten: oklch(90% 0.002 var(--hue));
-    --card-color: oklch(25% 0.02 var(--hue));
-    --card-color-lighten: oklch(40% 0.04 var(--hue));
-    --card-color-transparent: oklch(30% 0.025 var(--hue) / 85%);
-    --background-color: oklch(17.5% 0.015 var(--hue));
+    --primary-color: hsl(32, 100%, 50%);
+    --primary-color-lighten: hsl(32, 100%, 40%);
+    --primary-color-hover: hsl(32, 100%, 20%);
+    --text-color: hsl(32, 10%, 95%);
+    --text-color-lighten: hsl(32, 10%, 90%);
+    --card-color: hsl(32, 10%, 25%);
+    --card-color-lighten: hsl(32, 10%, 40%);
+    --card-color-transparent: hsl(32, 10%, 30%, 0.85);
+    --background-color: hsl(32, 10%, 17.5%);
   }
 
   .swup-progress-bar {
