--- a/src/components/misc/CopyRight.astro
+++ b/src/components/misc/CopyRight.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
-import YukinaConfig from "../../../yukina.config";
+import YukinaConfig from "../../../app.config";
 import I18nKeys from "../../locales/keys";
 import { i18n } from "../../locales/translation";
 import { formatDate } from "../../utils/date";
