--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-import YukinaConfig from "../../yukina.config";
+import YukinaConfig from "../../app.config";
 import BaseHead from "../components/BaseHead.astro";
 ---
 
