--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -181,13 +181,10 @@ const tagKeys = [...tags.keys()];
       <p>
         Powered By <a
           class="link"
-          href="https://github.com/WhitePaper233/yukina">Yukina</a
-        > & <a class="link" href="https://astro.build/">Astro</a>
+          href="https://cacaobyte.com/">CacaoByte S.A</a
+        > & <a class="link" href="https://boxter100.github.io/Sentinel_Lab_Dev/">Sentinel Lab S.A</a>
       </p>
       <p>
-        <a class="link" href={new URL("sitemap-index.xml", YukinaConfig.site)}
-          >SiteMap</a
-        > / <a class="link" href="/rss.xml">RSS</a>
       </p>
     </div>
   </footer>
