build(update): :art: Update to `Tailwindcss v4` ✅

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -7,7 +7,7 @@
 }
 
 .article code:not(pre code) {
-  @apply text-sm;
+  /* @apply text-sm; */
   font-family: var(--code-font) !important;
   border-radius: 4px;
   color: var(--primary-color) !important;
