--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 import Base from "./BaseLayout.astro";
 import NavBar from "../components/NavBar.astro";
 import Banner from "../components/Banner.astro";
@@ -45,18 +46,3 @@ const props = Astro.props;
     </div>
   </div>
 </Base>
-
-<style>
-  .main-container {
-    @apply w-full md:min-w-[80%] md:max-w-[80%] lg:min-w-[var(--page-width-lg)] lg:max-w-[var(--page-width-lg)] xl:min-w-[var(--page-width-xl)] xl:max-w-[var(--page-width-xl)];
-    @apply md:mx-auto;
-  }
-
-  .side-bar {
-    @apply hidden min-w-[248px] xl:block;
-  }
-
-  .content {
-    @apply xl:w-[calc(var(--page-width-xl)-264px)];
-  }
-</style>
