chore(games): :construction_worker: Update slug game example

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -44,7 +44,7 @@ const navCount = YukinaConfig.navigators.length;
         <p>{YukinaConfig.brandTitle}</p>
       </div>
     </a>
-    <div class="menu">
+    <!-- <div class="menu">
       {
         YukinaConfig.navigators.map((nav) =>
           nav.href === "/games" ? (
@@ -61,7 +61,7 @@ const navCount = YukinaConfig.navigators.length;
           ),
         )
       }
-    </div>
+    </div> -->
     <div class="toolbar">
       <div class="lg:hidden">
         <MobileSearchBar client:only="svelte" />
@@ -86,19 +86,6 @@ const navCount = YukinaConfig.navigators.length;
         </button>
       </div>
     </div>
-  </div>
-
-  <div id="games-menu" class="hidden flex-wrap gap-4 px-6 py-4">
-    {
-      games.map((game) => (
-        <a
-          href={`/games/${game}`}
-          class="rounded-lg bg-[var(--primary-color)] px-6 py-3 font-bold text-[var(--card-color)]"
-        >
-          {game}
-        </a>
-      ))
-    }
   </div>
 
   <div id="mobile-menu" class="px-3 transition-all">
