--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -77,7 +77,7 @@ const { time, wordCount } = props.readingMetadata;
           />
         </a>
       </div>
-      <!-- <div class="ml-2 hidden lg:block">
+      <div class="ml-2 hidden lg:block">
         <ul class="flex flex-row space-x-4">
           <li class="data space-x-2">
             <PostCardInfoIcon name="cuida:calendar-outline" />
@@ -123,7 +123,7 @@ const { time, wordCount } = props.readingMetadata;
             }
           </li>
         </ul>
-      </div> -->
+      </div>
       <div class="lg:ml-2">
         <p class="desc">{props.description}</p>
       </div>
