Manejo de pases parametro formulario

--- a/src/pages/forms/[game]/[id].astro
+++ b/src/pages/forms/[game]/[id].astro
@@ -12,7 +12,7 @@ const { game, id } = Astro.params;
 
 <FormsGamesWhatsApp 
   gameName={game ?? ""} 
-  coinAmount={Number(id)} 
+  coinAmount={id ?? ""} 
   client:load 
 />
 
