--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,9 @@
 ---
-import YukinaConfig from "../../app.config";
+import SdepMoneConfig from "../../app.config";
 import BaseHead from "../components/BaseHead.astro";
 ---
 
-<html lang={YukinaConfig.locale}>
+<html lang={SdepMoneConfig.locale}>
   <BaseHead />
   <body class="overflow-y-hidden">
     <slot />
