--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,5 +1,6 @@
 ---
-import YukinaConfig from "../../app.config";
+import "../styles/components/banner.css";
+import SdepMoneConfig from "../../app.config";
 import { GetCoverURLForUnspecifiedEntry } from "../utils/cover";
 
 export interface Props {
@@ -13,7 +14,7 @@ const { title, subTitle, bannerImage, slug } = Astro.props;
 const hasTitle = title !== undefined || subTitle !== undefined;
 const hasHeaderImg = bannerImage !== undefined || slug !== undefined;
 
-let carouselImgsList = YukinaConfig.banners;
+let carouselImgsList = SdepMoneConfig.banners;
 const carouselAnimationTime = `${carouselImgsList.length * 6}s`;
 ---
 
@@ -54,9 +55,9 @@ const carouselAnimationTime = `${carouselImgsList.length * 6}s`;
             class:list={[hasTitle ? "title-normal" : "title-index"]}
             class="title"
           >
-            {title ?? YukinaConfig.title}
+            {title ?? SdepMoneConfig.title}
           </h1>
-          <h2 class="subtitle">{subTitle ?? YukinaConfig.subTitle}</h2>
+          <h2 class="subtitle">{subTitle ?? SdepMoneConfig.subTitle}</h2>
         </div>
       </div>
     </div>
