--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,10 +6,11 @@
 @import "../styles/transitions.css";
 @import "../styles/searchbar.css";
 
-/* pages */
-@import "./pages/post-card.css";
-
 @import "overlayscrollbars/overlayscrollbars.css";
+
+/* pages */
+
+/* components */
 
 @custom-variant dark (&:is(.dark *));
 
@@ -86,26 +87,31 @@
   --sidebar-ring: hsl(32, 100%, 70%);
 
   /* base app */
-  --hue: 32;
-  --primary-color: hsl(32, 100%, 50%);
-  --primary-color-lighten: hsl(32, 100%, 95%);
-  --primary-color-hover: hsl(32, 100%, 60%);
-  --primary-color-transparent: hsl(32, 100%, 50%, 0.12);
-  --text-color: hsl(0, 0%, 20%);
-  --text-color-lighten: hsl(0, 0%, 40%);
-  --card-color: hsl(0, 0%, 100%);
-  --card-color-transparent: hsl(0, 0%, 100%, 0.85);
-  --background-color: hsl(32, 100%, 98%);
+  --hue: 300;
+
+  --primary-color: oklch(70% 0.15 var(--hue));
+  --primary-color-lighten: oklch(95% 0.02 var(--hue));
+  --primary-color-hover: oklch(90% 0.025 var(--hue));
+  --primary-color-transparent: oklch(70% 0.15 var(--hue) / 15%);
+  --text-color: oklch(30% 0 0);
+  --text-color-lighten: oklch(50% 0 0);
+  --card-color: oklch(100% 0 0);
+  --card-color-transparent: oklch(100% 0 0 / 85%);
+  --background-color: oklch(97% 0.01 var(--hue));
+
   --brand-font: "Raleway", "Noto Sans SC", sans-serif;
   --primary-font: "Noto Sans SC", sans-serif;
   --code-font: "JetBrains Mono", "Fira Code", monospace;
+
   --page-width-lg: 992px;
   --page-width-xl: 1264px;
+
   --banner-height: 55vh;
   --title-font: var(--brand-font);
-  --title-color: hsl(0, 0%, 100%, 0.95);
+  --title-color: oklch(100% 0 0 / 95%);
   --subtitle-font: var(--brand-font);
-  --subtitle-color: hsl(0, 0%, 100%, 0.85);
+  --subtitle-color: oklch(100% 0 0 / 85%);
+
   --onload-animation-delay: 100ms;
   --onload-animation-interval: 100ms;
 }
@@ -144,11 +150,11 @@
   --sidebar-ring: oklch(60% 0.22 var(--hue));
 
   /* base app dark */
-  --primary-color: oklch(70% 0.2 var(--hue));
-  --primary-color-lighten: oklch(45% 0.06 var(--hue));
-  --primary-color-hover: oklch(60% 0.22 var(--hue));
-  --text-color: oklch(95% 0.005 var(--hue));
-  --text-color-lighten: oklch(85% 0.004 var(--hue));
+  --primary-color: oklch(70% 0.125 var(--hue));
+  --primary-color-lighten: oklch(40% 0.04 var(--hue));
+  --primary-color-hover: oklch(20% 0.015 var(--hue));
+  --text-color: oklch(95% 0.002 var(--hue));
+  --text-color-lighten: oklch(90% 0.002 var(--hue));
   --card-color: oklch(25% 0.02 var(--hue));
   --card-color-lighten: oklch(40% 0.04 var(--hue));
   --card-color-transparent: oklch(30% 0.025 var(--hue) / 85%);
@@ -170,103 +176,6 @@
   background-color: var(--primary-color);
 }
 
-/* MainLayout */
-.main-container {
-  @apply w-full md:min-w-[80%] md:max-w-[80%] lg:min-w-[var(--page-width-lg)] lg:max-w-[var(--page-width-lg)] xl:min-w-[var(--page-width-xl)] xl:max-w-[var(--page-width-xl)];
-  @apply md:mx-auto;
-}
-
-.side-bar {
-  @apply hidden min-w-[248px] xl:block;
-}
-
-.content {
-  @apply xl:w-[calc(var(--page-width-xl)-264px)];
-}
-
-/* Banner */
-
-.banner {
-  @apply relative h-[calc(var(--banner-height)*3/4)] opacity-100 lg:h-[var(--banner-height)];
-}
-
-.carousel {
-  @apply absolute left-0 top-0 -z-10 block h-[calc(var(--banner-height)*3/4)] w-full overflow-hidden bg-white lg:h-[var(--banner-height)];
-  animation-fill-mode: forwards;
-}
-
-.carousel::before {
-  @apply absolute left-0 top-0 z-10 block h-full w-full bg-black/25 transition-all content-[''];
-  @apply dark:bg-black/30;
-}
-
-.carousel .item {
-  @apply absolute left-0 top-0 z-0 h-full w-full origin-center bg-cover bg-center bg-no-repeat opacity-0;
-}
-
-.cover {
-  @apply absolute left-0 top-0 z-0 block h-[var(--banner-height)] w-full overflow-hidden bg-white;
-}
-
-.cover::before {
-  @apply absolute left-0 top-0 z-10 block h-full w-full bg-black/25 transition-all content-[''];
-  @apply dark:bg-black/30;
-}
-
-.cover .item {
-  @apply h-full w-full object-cover;
-}
-/* 
-.title {
-  @apply mt-8 text-center font-bold text-[var(--title-color)] drop-shadow-lg lg:mt-1;
-  font-family: var(--title-font);
-} */
-
-/* .title-index {
-  @apply mb-0 text-6xl leading-[5rem] lg:mb-1 lg:text-8xl;
-} */
-
-.title-normal {
-  @apply mb-1 text-3xl lg:text-5xl;
-}
-
-.subtitle {
-  @apply text-center text-xl text-[var(--subtitle-color)] drop-shadow-md lg:text-3xl;
-  font-family: var(--subtitle-font);
-}
-
-.waves {
-  @apply absolute -bottom-[1px] h-[10vh] max-h-[9.375rem] min-h-[3.125rem] w-full;
-  @apply md:h-[15vh];
-}
-
-.waves>.parallax use {
-  @apply fill-[var(--background-color)];
-  animation: wave 25s cubic-bezier(0.5, 0.5, 0.45, 0.5) infinite;
-}
-
-@keyframes wave {
-  0% {
-    transform: translate3d(-90px, 0, 0);
-  }
-
-  100% {
-    transform: translate3d(85px, 0, 0);
-  }
-}
-
-@keyframes banner-onload-animation {
-  0% {
-    opacity: 0;
-    height: calc(var(--banner-height) + 4rem);
-  }
-
-  100% {
-    opacity: 1;
-    height: var(--banner-height);
-  }
-}
-
 /* Footer */
 .link {
   @apply text-[var(--primary-color)] transition-all hover:brightness-110;
@@ -278,165 +187,6 @@
 
 .category:hover>p {
   @apply pl-2 text-[var(--primary-color)];
-}
-/* NavBar */
-.nav {
-  @apply fixed left-1/2 z-10 flex w-full select-none flex-col justify-end rounded-b-xl bg-[var(--card-color-transparent)] px-2.5 opacity-0 backdrop-blur-md transition-all;
-  @apply lg:w-[var(--page-width-lg)] lg:rounded-b-2xl;
-  @apply xl:w-[var(--page-width-xl)];
-  transform: translateX(-50%) translateY(-5rem);
-  animation: 300ms nav-onload-animation;
-  animation-fill-mode: forwards;
-}
-
-.brand {
-  @apply flex w-full flex-row items-center justify-between;
-  @apply lg:hidden;
-}
-
-.brand > .title {
-  @apply absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 truncate rounded-lg px-4 py-2 text-2xl font-medium text-[var(--primary-color)] transition-all;
-  @apply hover:bg-[var(--primary-color-hover)];
-  font-family: var(--brand-font);
-}
-
-.brand button {
-  @apply mr-2 flex h-[44px] w-[44px] flex-row items-center rounded-lg text-[var(--text-color)] transition-all;
-  @apply hover:bg-[var(--primary-color-hover)] hover:text-[var(--primary-color)];
-}
-
-.brand .icon {
-  @apply w-full text-center text-2xl;
-}
-
-.brand-lg {
-  @apply hidden h-[3.25rem] rounded-lg px-5 font-medium transition-all;
-  @apply lg:block;
-  @apply hover:bg-[var(--primary-color-hover)];
-  @apply active:scale-95;
-}
-
-.brand-lg > .title {
-  @apply flex h-full flex-row content-center items-center text-2xl text-[var(--primary-color)];
-  font-family: var(--brand-font);
-}
-
-.brand-lg .icon {
-  @apply mr-2 stroke-2 text-2xl;
-}
-
-.menu {
-  @apply absolute left-1/2 hidden -translate-x-1/2 items-center justify-between space-x-1 text-lg text-[var(--text-color)] opacity-85;
-  @apply lg:flex;
-}
-
-.menu a {
-  @apply flex h-[3.25rem] items-center rounded-lg px-6 transition-all;
-  @apply hover:bg-[var(--primary-color-hover)] hover:text-[var(--primary-color)];
-  @apply active:scale-95;
-}
-
-.menu p {
-  @apply font-medium leading-normal;
-  font-family: var(--primary-font);
-}
-
-.toolbar {
-  @apply flex flex-row items-center justify-end space-x-1 lg:mr-2;
-}
-
-.toolbar button {
-  @apply flex w-11 justify-center rounded-lg py-2 text-[var(--text-color)] transition-all;
-  @apply hover:bg-[var(--primary-color-hover)] hover:text-[var(--primary-color)];
-}
-
-.toolbar .icon {
-  @apply stroke-2 text-xl;
-}
-
-.mobile-menu-nav-closed {
-  @apply h-0 opacity-0;
-}
-
-.mobile-menu-nav-opened {
-  @apply opacity-100;
-}
-
-.mobile-menu-nav li a {
-  @apply flex flex-row items-center justify-between;
-  font-family: var(--primary-font);
-}
-
-@keyframes nav-onload-animation {
-  0% {
-    transform: translateY(-5rem) translateX(-50%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0) translateX(-50%);
-    opacity: 1;
-  }
-}
-
-
-/* SideBar */
-.avatar-wrapper::after {
-  @apply absolute left-3 top-3 h-56 w-56 rounded-xl transition-all content-[''];
-}
-
-.avatar-wrapper::after:hover {
-  @apply bg-black/25 dark:bg-black/50;
-}
-
-.avatar {
-  @apply h-56 w-56 rounded-xl transition-all hover:cursor-pointer;
-}
-
-.username>p {
-  @apply text-center text-xl font-semibold text-[var(--text-color)];
-  font-family: var(--title-font);
-}
-
-.username>div {
-  @apply mx-auto mt-1 h-1 w-8 rounded-full bg-[var(--primary-color)];
-}
-
-.slogan {
-  font-family: var(--title-font);
-}
-
-.title {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  position: relative;
-}
-
-.title::before {
-  position: absolute;
-  display: block;
-  content: " ";
-  background-color: var(--primary-color);
-  top: 3px;
-  bottom: 3px;
-  width: 0.3rem;
-  border-radius: 4px;
-}
-
-.title p {
-  font-family: var(--primary-font);
-}
-
-.category {
-  font-family: var(--primary-font);
-}
-
-.category:hover>p {
-  @apply pl-2 text-[var(--primary-color)];
-}
-
-.tag {
-  font-family: var(--primary-font);
 }
 
 /* Pagination */
