--- a/src/styles/pages/post-card.css
+++ b/src/styles/pages/post-card.css
@@ -1,4 +1,6 @@
-.title {
+@import "tailwindcss";
+
+.title-post {
   @apply flex w-full flex-row items-center space-x-1 align-top text-xl font-semibold text-[var(--text-color)] lg:text-2xl;
   @apply transition-all hover:text-[var(--primary-color)];
   font-family: var(--primary-font);
