chore(games): :arrow_up: Update `games`

--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -27,6 +27,9 @@ const entryID = IdToSlug(props.id);
 const contentUrl = `/games/${props.gameSlug}/${props.gameId}`;
 
 const { time, wordCount } = props.readingMetadata;
+
+console.log('ID: ', entryID);
+
 ---
 
 <div
