--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,5 @@
 ---
 import "../styles/global.css";
-import "./main-layout.css";
 import Base from "./BaseLayout.astro";
 import NavBar from "../components/NavBar.astro";
 import Banner from "../components/Banner.astro";
@@ -33,7 +32,7 @@ const props = Astro.props;
     )
   }
 
-  <div class="main-container my-10">
+  <div class="main-container py-10">
     <div class="flex flex-row items-start xl:space-x-4">
       <div class="side-bar">
         <SideBar />
