--- a/src/pages/games/[...game].astro
+++ b/src/pages/games/[...game].astro
@@ -1,6 +1,7 @@
 ---
 import SdepMoneConfig from "app.config";
 import MainLayout from "../../layouts/MainLayout.astro";
+import FormsGamesWhatsApp from "@/components/forms/FormsGames";
 
 export async function getStaticPaths() {
   const games = Object.keys(SdepMoneConfig.gameBanner);
@@ -12,7 +13,9 @@ export async function getStaticPaths() {
 }
 
 const { game } = Astro.props;
+const id = "pase-elite"
 const bannerImage = SdepMoneConfig.gameBanner[game];
+
 ---
 
 <MainLayout title={game} subTitle={game} bannerImage={bannerImage}>
@@ -27,5 +30,10 @@ const bannerImage = SdepMoneConfig.gameBanner[game];
         </p>
       </div>
     </div>
+    <FormsGamesWhatsApp 
+    gameName={game ?? ""} 
+    coinAmount={id ?? ""} 
+    client:load 
+  />
   </div>
 </MainLayout>
