--- a/src/components/widgets/SocialIcon.astro
+++ b/src/components/widgets/SocialIcon.astro
@@ -5,7 +5,7 @@ export interface Props {
   name: string;
   link: string;
 }
-const { name, link } = Astro.props;
+const { name, link } = Astro.props ?? {};
 ---
 
 <a href={link} target="_blank">
