--- a/src/layouts/ChipLayout.astro
+++ b/src/layouts/ChipLayout.astro
@@ -14,7 +14,7 @@ export interface Props {
   slug?: string;
 }
 
-const { chips, title, subTitle, bannerImage, slug } = Astro.props;
+const { chips, title, subTitle, bannerImage, slug } = Astro.props ?? {};
 ---
 
 <Main title={title} subTitle={subTitle} bannerImage={bannerImage} slug={slug}>
