--- a/src/pages/games/[...game].astro
+++ b/src/pages/games/[...game].astro
@@ -12,7 +12,7 @@ export async function getStaticPaths() {
   }));
 }
 
-const { game } = Astro.props;
+const { game } = Astro.props ?? {};
 const id = "pase-elite"
 const bannerImage = SdepMoneConfig.gameBanner[game];
 
