--- a/src/pages/games/[...game].astro
+++ b/src/pages/games/[...game].astro
@@ -2,6 +2,7 @@
 import SdepMoneConfig from "app.config";
 import MainLayout from "../../layouts/MainLayout.astro";
 import FormsGamesWhatsApp from "@/components/forms/FormsGames";
+import GameStore from "@/components/game-store";
 
 export async function getStaticPaths() {
   const games = Object.keys(SdepMoneConfig.gameBanner);
@@ -20,16 +21,11 @@ const bannerImage = SdepMoneConfig.gameBanner[game];
 
 <MainLayout title={game} subTitle={game} bannerImage={bannerImage}>
   <div class="archives">
-    <div class="article-wrapper">
-      <div class="article">
-        <h1 class="text-4xl font-bold text-[var(--primary-color)]">
-          Juego: {game}
-        </h1>
-        <p class="mt-4 text-lg text-[var(--text-color-lighten)]">
-          Esta es la página dedicada al juego <strong>{game}</strong>.
-        </p>
-      </div>
-    </div>
+    <GameStore
+      game={game}
+      client:load
+    />
+
     <FormsGamesWhatsApp 
     gameName={game ?? ""} 
     coinAmount={id ?? ""} 
