--- a/src/pages/games/[...game].astro
+++ b/src/pages/games/[...game].astro
@@ -3,6 +3,7 @@ import SdepMoneConfig from "app.config";
 import MainLayout from "../../layouts/MainLayout.astro";
 import FormsGamesWhatsApp from "@/components/forms/FormsGames";
 import GameStore from "@/components/game-store";
+import { gameData } from "@/data/game-data";
 
 export async function getStaticPaths() {
   const games = Object.keys(SdepMoneConfig.gameBanner);
@@ -14,22 +15,22 @@ export async function getStaticPaths() {
 }
 
 const { game } = Astro.props ?? {};
-const id = "pase-elite"
+const id = "pase-elite";
 const bannerImage = SdepMoneConfig.gameBanner[game];
-
 ---
 
 <MainLayout title={game} subTitle={game} bannerImage={bannerImage}>
   <div class="archives">
     <GameStore
       game={game}
+      gameData={gameData}
       client:load
     />
 
     <FormsGamesWhatsApp 
-    gameName={game ?? ""} 
-    coinAmount={id ?? ""} 
-    client:load 
-  />
+      gameName={game ?? ""} 
+      coinAmount={id ?? ""} 
+      client:load 
+    />
   </div>
 </MainLayout>
