--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -19,7 +19,7 @@ const tagKeys = [...tags.keys()];
       class="onload-animation rounded-3xl bg-[var(--card-color)] p-3"
       style=`animation-delay: var(--onload-animation-delay);`
     >
-      <a href="/about" class="avatar-wrapper">
+      <a href="/" class="avatar-wrapper">
         <img
           src={SdepMoneConfig.avatarUrl}
           alt="avatar"
