--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,11 +37,8 @@ const tagKeys = [...tags.keys()];
         />
       </a>
       <div class="flex grow flex-col justify-center space-y-4 p-4">
-        <div class="flex flex-col items-center">
-          <a
-            href="/about"
-            class="line-clamp-1 text-xl font-semibold text-[var(--text-color)]"
-          >
+        <div class="flex flex-col items-center space-y-2 text-center">
+  
             {SdepMoneConfig.username}
           </a>
           <span class="mb-2 mt-1 h-1 w-8 rounded-full bg-[var(--primary-color)]"
