--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -20,6 +20,7 @@ export interface Props {
   readingMetadata: { time: number; wordCount: number };
   gameSlug?: string;   
   gameId?: string; 
+  titleGame?: string;
 }
 
 const props = Astro.props  ?? {};
