--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -26,7 +26,7 @@ const tagKeys = [...tags.keys()];
           class="avatar lozad select-none"
         />
       </a>
-      <div class="username mt-4">
+      <div class="username mt-4 flex flex-col items-center space-y-2 text-center">
         <p>{SdepMoneConfig.username}</p>
       </div>
       <p class="slogan mt-2 text-center text-[var(--text-color-lighten)]">
