--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -13,6 +13,7 @@ export interface Props {
   subTitle?: string;
   bannerImage?: string;
   slug?: string;
+  titleGame?: string;
 }
 
 const props = Astro.props ?? {};
@@ -25,9 +26,10 @@ const props = Astro.props ?? {};
     SdepMoneConfig.bannerStyle == "LOOP" && (
       <Banner
         title={props.title}
-        subTitle={props.subTitle}
+        subTitle={props.titleGame}
         bannerImage={props.bannerImage}
         slug={props.slug}
+        titleGame={props.titleGame}
       />
     )
   }
