--- a/src/layouts/PostArchiveLayout.astro
+++ b/src/layouts/PostArchiveLayout.astro
@@ -13,11 +13,12 @@ export interface Props {
   subTitle?: string;
   bannerImage?: string;
   slug?: string;
+  titleGame?: string;
 }
 
 
 
-const { archiveMap, title, subTitle, bannerImage, slug } = Astro.props ?? {};
+const { archiveMap, title, subTitle, bannerImage, slug, titleGame} = Astro.props ?? {};
 ---
 
 <Main title={title} subTitle={subTitle} bannerImage={bannerImage} slug={slug}>
