--- a/src/pages/games/[...game].astro
+++ b/src/pages/games/[...game].astro
@@ -15,11 +15,10 @@ export async function getStaticPaths() {
 }
 
 const { game } = Astro.props ?? {};
-const id = "pase-elite";
 const bannerImage = SdepMoneConfig.gameBanner[game];
 ---
 
-<MainLayout title={game} subTitle={game} bannerImage={bannerImage}>
+<MainLayout title={game} subTitle={game} bannerImage={bannerImage} titleGame={game}>
   <div class="archives">
     <GameStore
       game={game}
