--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -65,10 +65,10 @@ const navCount = SdepMoneConfig.navigators.length;
 
     <div class="toolbar">
       <div class="lg:hidden">
-        <MobileSearchBar client:only="svelte" />
+        <!-- <MobileSearchBar client:only="svelte" /> -->
       </div>
       <div class="hidden lg:block">
-        <SearchBar client:only="svelte" />
+        <!-- <SearchBar client:only="svelte" /> -->
       </div>
       <div class="theme">
         <button type="button" id="theme-switcher">
