cambios correciones al cliente

--- a/src/pages/games/[...game].astro
+++ b/src/pages/games/[...game].astro
@@ -26,5 +26,5 @@ const bannerImage = SdepMoneConfig.gameBanner[game];
       client:load
     />
   </div>
-  <PaymentMethods/>
+  <PaymentMethods  client:load/>
 </MainLayout>
