--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -19,11 +19,11 @@ const tagKeys = [...tags.keys()];
       class="onload-animation rounded-3xl bg-[var(--card-color)] p-3"
       style=`animation-delay: var(--onload-animation-delay);`
     >
-      <a href="/" class="avatar-wrapper">
+      <a href="/" class="avatar-wrapper  ">
         <img
           src={SdepMoneConfig.avatarUrl}
           alt="avatar"
-          class="avatar lozad select-none"
+          class="avatar lozad select-none rounded-3xl transition-all hover:brightness-75"
         />
       </a>
       <div class="username mt-4 flex flex-col items-center space-y-2 text-center">
